@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - Added run_manifest JSON column to eseq_run table.
+
 release 6.39.1 (2025-08-06)
  - Renamed scripts/update_schema_7.0.0.sql to scripts/update_schema_6.39.0.sql
    so that the name of the script corresponds to the release version for the
